--- a/LSON/style.css
+++ b/LSON/style.css
@@ -135,3 +135,15 @@ margin-right: 500px;
     justify-content: center;
     align-items: center;
 }
+.column {
+    flex: 1;
+    background-size: cover;
+    background-position: center;
+    min-width: 0;
+    transition: opacity 1s ease-in-out; /* Smooth transition for opacity */
+    opacity: 1; /* Fully visible */
+}
+
+.column.fade-out {
+    opacity: 0; /* Hidden */
+}
