--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ body {
 }
 
 .white-overlay.scrolled {
-    height: 10%;
+    height: 0%;
     top: 0;
 }
 
@@ -104,11 +104,11 @@ body {
     gap: 20px;
     transition: all 0.5s ease-in-out;
     transform: scale(1.7); 
-    animation: bounce 2s infinite;
+    animation: bounce 4s ease-in-out;
 }
 
 .logo-letter {
-    font-size: 3em;
+    font-size: 5em;
     font-weight: bold;
     color: #34495e;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
