--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,9 @@ body {
 }
 
 .background-container.scrolled {
-    margin-top: 15vh;
-    height: calc(100vh - 15vh);
+    height: 100vh; 
+    position: relative;
+    top:20%;
 }
 
 .column {
@@ -90,11 +91,13 @@ body {
     justify-content: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: height 0.5s ease-in-out, top 0.5s ease-in-out;
+    padding-top: 50px;
 }
 
 .white-overlay.scrolled {
-    height: 0%;
+    height: 0;
     top: 0;
+    
 }
 
 .logo-container {
@@ -177,7 +180,6 @@ logo-letter.red { color: #d21034; }
 
 .second-white-overlay {
     position: fixed;
-    top: 35%;
     left: 0;
     width: 100%;
     height: 4%;
@@ -190,7 +192,7 @@ logo-letter.red { color: #d21034; }
 }
 
 .second-white-overlay.scrolled {
-    top: 10%;
+    top: 20%;
 }
 
 .ticker-wrapper {
@@ -221,7 +223,7 @@ logo-letter.red { color: #d21034; }
 
 .image-boxes-container {
     position: fixed;
-    top: 39%;
+    top: 41%;
     left: 0;
     display: flex;
     flex-direction: column;
@@ -232,7 +234,7 @@ logo-letter.red { color: #d21034; }
 }
 
 .image-boxes-container.scrolled {
-    top: 14%;
+    top: 25%;
 }
 
 .image-box {
@@ -274,50 +276,6 @@ logo-letter.red { color: #d21034; }
     padding: 10px 0;
     z-index: 1;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.hamburger-menu {
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    width: 30px;
-    height: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    cursor: pointer;
-    z-index: 3;
-}
-
-.hamburger-menu div {
-    width: 100%;
-    height: 4px;
-    background-color: #333;
-}
-
-.nav-menu {
-    display: none;
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 200px;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.9);
-    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
-    padding-top: 60px;
-    z-index: 2;
-}
-
-.nav-menu a {
-    display: block;
-    padding: 10px;
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-}
-
-.nav-menu a:hover {
-    background-color: #f0f0f0;
 }
 
 @keyframes ticker {
@@ -392,3 +350,107 @@ logo-letter.red { color: #d21034; }
     opacity: 0;
     transition: opacity 1s;
 }
+
+#header{
+    width:100%;
+    height:auto;
+    background-size: cover;
+    background-position: center;
+   
+
+}
+.container{
+    padding: 10px 10%;
+}
+
+nav{   
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    background: #34495e;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    height: 50px;
+    
+}
+
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px 10px;
+}
+
+nav ul li a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    position: relative;
+}
+
+nav ul li a::after{
+    content: '' ;
+    width: 0;
+    height: 3px;
+    background: white;
+    position: relative;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+}
+nav ul li a:hover::after{
+   width: 100%;
+}
+nav .fa-solid{
+    display: none;
+}
+
+@media only screen and (max-width: 600px){
+    nav{
+        height: 0;
+    }
+    nav .fa-solid{
+        display: block;
+        font-size: 25px;
+    }
+    nav ul li a{
+        color: #fff;
+    }
+    nav ul li{
+        display: block;
+        margin: 25px;
+    }
+    nav ul{
+        background: #34495e;
+        position: fixed;
+        top:0;
+        right:-300px;
+        width:200px;
+        height:170vh;
+        padding-top: 0;
+        margin-top: 0;
+        color: #fff;
+        z-index: 2;
+        transition: right 0.5s;
+        
+    }
+    nav ul .fa-solid{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+
+    }
+}
+  
+
+
+
+
+
+
+
