--- a/All sports/golf.css
+++ b/All sports/golf.css
@@ -269,7 +269,7 @@ form input[type="text"]::placeholder {
 
 /* -----------Calendar------------------------ */
 .calendar-container {
-    max-width: 950px;
+    max-width: 700px;
     margin: 0 auto;
     background: linear-gradient (135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
     backdrop-filter: blur(10px);
@@ -278,6 +278,7 @@ form input[type="text"]::placeholder {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     font-weight: 600;
     margin-left: -15%;
+    max-height: 600px;
 }
 
 .next-month,
@@ -336,7 +337,7 @@ form input[type="text"]::placeholder {
 }
 
 .calendar {
-    width: 100%;
+    width: 80%;
     border-collapse: collapse;
 }
 
